vlib/v/checker/tests/immutable_deref.vv
struct Context {}

const ctx_ptr = &Context(unsafe { nil })

fn main() {
	x := &ctx_ptr
	unsafe {
		*x = &Context{}
		_ = x
	}
}
